# langlog

./: .rumdl.toml  README.md  journel.md
experiments/langlog/: .gitignore  Cargo.toml  HIR.md  INTEGER_SAFETY.md  MARKER_MODES.md  PLAN.md  PROOF_IR.md  REFERENCE.md  SEMANTICS.md  SPEC.md  TOOLS.md  TRACEABILITY.md  TUTORIAL.md  TYPE_SYSTEM.md  WASM.md  rumdl.toml  rustfmt.toml  tasks.sh
experiments/langlog/.cargo/: mutants.toml
experiments/langlog/.duvet/: .gitignore  config.toml  snapshot.txt
experiments/langlog/crates/langlog-compiler/: Cargo.toml
experiments/langlog/crates/langlog-compiler/src/: lib.rs  tests.rs
experiments/langlog/crates/langlog-driver/: Cargo.toml
experiments/langlog/crates/langlog-driver/src/: main.rs  tests.rs
experiments/langlog/crates/langlog-driver/tests/: cli.rs
experiments/langlog/crates/langlog-playground-wasm/: Cargo.toml
experiments/langlog/crates/langlog-playground-wasm/src/: lib.rs  tests.rs
experiments/langlog/crates/langlog-proof/: Cargo.toml
experiments/langlog/crates/langlog-proof/src/: lib.rs
experiments/langlog/crates/langlog-sema/: Cargo.toml
experiments/langlog/crates/langlog-syntax/: Cargo.toml
experiments/langlog/crates/langlog-wasm/: Cargo.toml
experiments/langlog/crates/langlog-xtask/: Cargo.toml
experiments/langlog/examples/: README.md  smoke.llg  tutorial.llg
experiments/langlog/notes/: README.md  parsing.md
experiments/langlog/playground/: app.js  examples.json  index.html  style.css
experiments/langlog/scripts/: check_requirement_tests.py
(+24 files in other folders)
